# sat-finder

./: .gitattributes  .gitignore  .hfignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  GRADIO.md  HF_SPACES.md
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  post-create.sh  post-start.sh
assets/: graz_embeddings.npz  vienna_embeddings.npz
config/: models.yaml
notebooks/: 00-xy-example-notebook.ipynb
scripts/: compute_similarity_matrix.py  create_sample_image.py  download_graz_data.py  download_vienna_data.py  download_vienna_full.py  precompute_embeddings.py
src/satfinder/: __init__.py  api.py  config.py  dataset.py  features.py  precompute.py  similarity.py  state.py  visualization.py
src/satfinder/ui/: __init__.py  controls.py  layout.py  viewer.py
static/: .gitignore  viewer.html
static/js/: .gitkeep
static/tiles_graz/: scene.dzi
